Prevent scrollbars of CSS containers from oscillating. One relayout shall be enough.

BUG: 177091

svn path=/trunk/KDE/kdelibs/; revision=978908